zz-out/pass14_run2/zz-scripts/chapter06/generate_pdot_plateau_vs_z.err
  File "/home/jplal/MCGT/zz-scripts/chapter06/generate_pdot_plateau_vs_z.py", line 58
    def _mcgt_cli_seed():
    ^^^
IndentationError: expected an indented block after 'if' statement on line 57
